--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RESTAURANTE</title>
+    <title>&#127856 Seu Zé lanches &#127839</title>
 </head>
 <body style="background-color: black; color: gold; text-align: center; vertical-align: middle;">
     <br>
     <br>
     <br>
-    <p style="font-size: 50px; font-family:Arial, Helvetica, sans-serif;">
-        <b>&#127856 Seu Zé lanches &#127839</b> 
-    </p>
-    <cite style="font-size: 25px;">O melhor lanche da cidade !!!</cite>
+    <b style="font-size: 70px; font-family:Arial, Helvetica, sans-serif;">&#127856 Seu Zé lanches &#127839</b>
+    <br>
+    <cite style="font-size: 30px;">O melhor lanche da cidade !!!</cite>
     <br>
     <br>
-    <p style="font-size: 30px; font-family:Arial, Helvetica, sans-serif ;">
+    <br>
+    <br>
+    <br>
+    <p style="font-size: 30px; font-family:Arial, Helvetica, sans-serif;">
         <a href="C:/xampp/htdocs/estacio/ara0062/cardapio.html"  target="_blank" style="color: gold; text-decoration: none;">
             &#127828 CARDAPIO &#127829
         </a>
     </p>
+    <p style="font-size: 30px; font-family:Arial, Helvetica, sans-serif;">
+        <a href="C:/xampp/htdocs/estacio/ara0062/bebidas.html"  target="_blank" style="color: gold; text-decoration: none;">
+            &#127865 BEBIDAS &#127866	
+        </a>
+    </p>
+
 
 </body>
 </html>
