Seu ze lanches 0.04

--- a/bebidas.html
+++ b/bebidas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&#127865 BEBIDAS &#127866</title>
 </head>
-<body style="background: black; color: gold;">
+<body style="background-color: black; color: gold; text-align: center; vertical-align: middle;">
     <table>
         <tr>
             <th style="border: 1PX gold SOLID;">ÁGUA</th>
