--- a/cardapio.html
+++ b/cardapio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&#127828 CARDAPIO &#127829</title>
 </head>
-<body style="background: black; color: gold;">
+<body style="background-color: black; color: gold;">    
     <table>
         <tr>
             <th style="border: 1PX gold SOLID;">LANCHE</th>
