Seu ze lanches 0.05

--- a/bebidas.html
+++ b/bebidas.html
@@ -4,146 +4,148 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>&#127865 BEBIDAS &#127866</title>
 </head>
-<body style="background-color: black; color: gold; text-align: center; vertical-align: middle;">
-    <table>
-        <tr>
-            <th style="border: 1PX gold SOLID;">ÁGUA</th>
-            <TH style="border: 1PX GOLD SOLID;">LITROS</TH>
-            <TH style="border: 1PX gold SOLID;">PREÇO</TH>
-        </tr>
-        <TR>
-            <TD>
-                <OL>
-                    <LI>TORNEIRA</LI>
-                    <LI>ÁGUA MINERAL</LI>
-                    <LI>AGUA COM GÁS</LI>
-                    <LI>ÁGUA DE COCO</LI>
-                </OL>
-            </TD>
-            <td>
-                <ul style="font-family:'Times New Roman', Times, serif;">
-                    <li> N/A </li>
-                    <li>500 ML</li>
-                    <li>500 ML</li>
-                    <li> 1 L</li>
-            <td>
-                <ul style="font-family:'Times New Roman', Times, serif;">
-                    <li>R$ 1,00</li>
-                    <li>R$ 2,00</li>
-                    <li>R$ 3,00</li>
-                    <li>R$ 7,00</li>
+<body class="bg-menu" style="background-color: black; color: gold; text-align: center; vertical-align: middle;">
+    <div class="container-bebidas">
+        <table>
             <tr>
-                <th style="border: 1PX gold SOLID;">SUCOS</th>
+                <th style="border: 1PX gold SOLID;">ÁGUA</th>
                 <TH style="border: 1PX GOLD SOLID;">LITROS</TH>
                 <TH style="border: 1PX gold SOLID;">PREÇO</TH>
             </tr>
             <TR>
                 <TD>
                     <OL>
-                        <LI>LARANJA</LI>
-                        <LI>LIMONADA</LI>
-                        <LI>ABACAXI</LI>
-                        <LI>ABACAXI COM HORTELÃ</LI>
-                        <LI>ACEROLA</LI>
-                        <LI>CAJA</LI>
-                        <LI>MARACUJA</LI>
-                        <LI>CAJU</LI>
-                        <LI>MANGA</LI>
+                        <LI>TORNEIRA</LI>
+                        <LI>ÁGUA MINERAL</LI>
+                        <LI>AGUA COM GÁS</LI>
+                        <LI>ÁGUA DE COCO</LI>
                     </OL>
                 </TD>
                 <td>
                     <ul style="font-family:'Times New Roman', Times, serif;">
-                        <li> 900 ML </li>
-                        <li> 1 L </li>
+                        <li> N/A </li>
+                        <li>500 ML</li>
+                        <li>500 ML</li>
                         <li> 1 L</li>
-                        <li> 1 L</li>
-                        <li> 1 L </li>
-                        <li> 900 ML</li>
-                        <li> 900 ML</li>
-                        <li> 900 ML</li>
-                        <LI> 1 L</LI>
                 <td>
                     <ul style="font-family:'Times New Roman', Times, serif;">
-                        <li>R$ 7,00</li>
-                        <li>R$ 5,00</li>
-                        <li>R$ 8,00</li>
-                        <li>R$ 10,00</li>
-                        <li>R$ 7,00</li>
-                        <li>R$ 5,00</li>
-                        <li>R$ 10,00</li>
-                        <li>R$ 9,00</li>
-                        <LI>R$ 8,00</LI>
-            </TR>
-            <tr>
-                <th style="border: 1PX gold SOLID;">REFRIGERANTES</th>
-                <TH style="border: 1PX GOLD SOLID;">LITROS</TH>
-                <TH style="border: 1PX gold SOLID;">PREÇO</TH>
-                <TH style="border: 1PX GOLD SOLID;">ML</TH>
-                <TH style="border: 1PX gold SOLID;">PREÇO</TH>
-            </tr>
-            <TR>
-                <TD>
-                    <OL>
-                        <LI>COCA-COLA</LI>
-                        <LI>COCA ZERO</LI>
-                        <LI>PEPSI</LI>
-                        <LI>PEPSI TWIST</LI>
-                        <LI>GUARANÁ ANTARTICA</LI>
-                        <LI>SÃO GERALDO</LI>
-                        <LI>FREVO</LI>
-                        <LI>WILSON</LI>
-                        <LI>INDAIA</LI>
-                    </OL>
-                </TD>  
-                <td>
-                    <ul style="font-family:'Times New Roman', Times, serif;">
-                        <li> 2 L </li>
-                        <li> 2 L </li>
-                        <li> 2 L</li>
-                        <li> 2 L</li>
-                        <li> 2 L </li>
-                        <li> 2 L</li>
-                        <li> 2 L</li>
-                        <li> 2 L</li>
-                        <LI> 2 L</LI>
-                <td>
-                    <ul style="font-family:'Times New Roman', Times, serif;">
-                        <li>R$ 8,00</li>
-                        <li>R$ 8,50</li>
-                        <li>R$ 7,00</li>
-                        <li>R$ 7,50</li>
-                        <li>R$ 7,80</li>
-                        <li>R$ 9,00</li>
-                        <li>R$ 4,00</li>
+                        <li>R$ 1,00</li>
+                        <li>R$ 2,00</li>
                         <li>R$ 3,00</li>
-                        <LI>R$ 4,50</LI>  
-                        <td>
-                            <ul style="font-family:'Times New Roman', Times, serif;">
-                                <li> 350 ML</li>
-                                <li> 350 ML</li>
-                                <li> 350 ML</li>
-                                <li> 350 ML</li>
-                                <li> 350 ML </li>
-                                <li> 350 ML</li>
-                                <li> 250 ML</li>
-                                <li> N/A</li>
-                                <LI> 220 ML</LI>
-                        <td>
-                            <ul style="font-family:'Times New Roman', Times, serif;">
-                                <li>R$ 5,00</li>
-                                <li>R$ 5,50</li>
-                                <li>R$ 4,50</li>
-                                <li>R$ 5,00</li>
-                                <li>R$ 5,00</li>
-                                <li>R$ 7,00</li>
-                                <li>R$ 1,50</li>
-                                <li> N/A</li>
-                                <LI>R$ 2,00</LI>  
-            </td>
-        </TR>
-    </table>
-
+                        <li>R$ 7,00</li>
+                <tr>
+                    <th style="border: 1PX gold SOLID;">SUCOS</th>
+                    <TH style="border: 1PX GOLD SOLID;">LITROS</TH>
+                    <TH style="border: 1PX gold SOLID;">PREÇO</TH>
+                </tr>
+                <TR>
+                    <TD>
+                        <OL>
+                            <LI>LARANJA</LI>
+                            <LI>LIMONADA</LI>
+                            <LI>ABACAXI</LI>
+                            <LI>ABACAXI COM HORTELÃ</LI>
+                            <LI>ACEROLA</LI>
+                            <LI>CAJA</LI>
+                            <LI>MARACUJA</LI>
+                            <LI>CAJU</LI>
+                            <LI>MANGA</LI>
+                        </OL>
+                    </TD>
+                    <td>
+                        <ul style="font-family:'Times New Roman', Times, serif;">
+                            <li> 900 ML </li>
+                            <li> 1 L </li>
+                            <li> 1 L</li>
+                            <li> 1 L</li>
+                            <li> 1 L </li>
+                            <li> 900 ML</li>
+                            <li> 900 ML</li>
+                            <li> 900 ML</li>
+                            <LI> 1 L</LI>
+                    <td>
+                        <ul style="font-family:'Times New Roman', Times, serif;">
+                            <li>R$ 7,00</li>
+                            <li>R$ 5,00</li>
+                            <li>R$ 8,00</li>
+                            <li>R$ 10,00</li>
+                            <li>R$ 7,00</li>
+                            <li>R$ 5,00</li>
+                            <li>R$ 10,00</li>
+                            <li>R$ 9,00</li>
+                            <LI>R$ 8,00</LI>
+                </TR>
+                <tr>
+                    <th style="border: 1PX gold SOLID;">REFRIGERANTES</th>
+                    <TH style="border: 1PX GOLD SOLID;">LITROS</TH>
+                    <TH style="border: 1PX gold SOLID;">PREÇO</TH>
+                    <TH style="border: 1PX GOLD SOLID;">ML</TH>
+                    <TH style="border: 1PX gold SOLID;">PREÇO</TH>
+                </tr>
+                <TR>
+                    <TD>
+                        <OL>
+                            <LI>COCA-COLA</LI>
+                            <LI>COCA ZERO</LI>
+                            <LI>PEPSI</LI>
+                            <LI>PEPSI TWIST</LI>
+                            <LI>GUARANÁ ANTARTICA</LI>
+                            <LI>SÃO GERALDO</LI>
+                            <LI>FREVO</LI>
+                            <LI>WILSON</LI>
+                            <LI>INDAIA</LI>
+                        </OL>
+                    </TD>  
+                    <td>
+                        <ul style="font-family:'Times New Roman', Times, serif;">
+                            <li> 2 L </li>
+                            <li> 2 L </li>
+                            <li> 2 L</li>
+                            <li> 2 L</li>
+                            <li> 2 L </li>
+                            <li> 2 L</li>
+                            <li> 2 L</li>
+                            <li> 2 L</li>
+                            <LI> 2 L</LI>
+                    <td>
+                        <ul style="font-family:'Times New Roman', Times, serif;">
+                            <li>R$ 8,00</li>
+                            <li>R$ 8,50</li>
+                            <li>R$ 7,00</li>
+                            <li>R$ 7,50</li>
+                            <li>R$ 7,80</li>
+                            <li>R$ 9,00</li>
+                            <li>R$ 4,00</li>
+                            <li>R$ 3,00</li>
+                            <LI>R$ 4,50</LI>  
+                            <td>
+                                <ul style="font-family:'Times New Roman', Times, serif;">
+                                    <li> 350 ML</li>
+                                    <li> 350 ML</li>
+                                    <li> 350 ML</li>
+                                    <li> 350 ML</li>
+                                    <li> 350 ML </li>
+                                    <li> 350 ML</li>
+                                    <li> 250 ML</li>
+                                    <li> N/A</li>
+                                    <LI> 220 ML</LI>
+                            <td>
+                                <ul style="font-family:'Times New Roman', Times, serif;">
+                                    <li>R$ 5,00</li>
+                                    <li>R$ 5,50</li>
+                                    <li>R$ 4,50</li>
+                                    <li>R$ 5,00</li>
+                                    <li>R$ 5,00</li>
+                                    <li>R$ 7,00</li>
+                                    <li>R$ 1,50</li>
+                                    <li> N/A</li>
+                                    <LI>R$ 2,00</LI>  
+                </td>
+            </TR>
+        </table>
+    </div>
 </body>
 </html>
