--- a/cardapio.html
+++ b/cardapio.html
@@ -4,82 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>&#127828 CARDAPIO &#127829</title>
 </head>
-<body style="background-color: black; color: gold;">    
-    <table>
-        <tr>
-            <th style="border: 1PX gold SOLID;">LANCHE</th>
-            <TH style="border: 1PX gold SOLID;">PREÇO</TH>
-        </tr>
-        <TR>
-            <TD>
-                <OL>
-                    <LI>ZÉ BURGER</LI>
-                    <I>Pão, maionese, hamburguer e mussarela.</I>
-                    <LI>SALADA-Z</LI>
-                    <i>Pão, maionese, hamburguer, presunto, mussarela, alface e tomate.
-                    </i>
-                    <LI>SALADA SUPER ZÉ</LI>
-                    <i>Pão, malonese, hamburguer, presunto, mussarela, bacon, ovo, catupiry, alface e tomate.</i>
-                    <LI>TOICINHO</LI>
-                    <i>Pão, maionese, hamburguer, mussarela, bacon, alface e tomate.</i>
-                    <LI>CALABREZA</LI>
-                    <i>Pão, maionese, hamburguer, mussarela, calabresa, alface e tomate.</i>
-                    <LI>CALAPORCO</LI>
-                    <i>Pão, maionese, hamburguer, mussarela, calabresa, bacon, alface e tomate.</i>
-                    <LI>BAGUNÇA</LI>
-                    <i>Pão, maionese, hamburguer, presunto, mussarela, calabresa, bacon, ovo, <br> filé de frango, catupiry, alface e tomate.</i>
-                    <LI>MISTO</LI>
-                    <i>Pão, maionese, presunto e mussarela.</i>
-                    <LI>MISTO A MODA DO ZÉ</LI>
-                    <i>Pão, maionese, presunto, mussarela, catupiry e tomate.</i>
-                    <LI>FRANGO</LI>
-                    <i>Pão, maionese, filé de frango, mussarela, alface e tomate.</i>
-                    <LI>FRANGO SUSPEITO</LI>
-                    <i>Pão, frango e etc...</i>
-                    <LI>FRANGO 3 QUEIJOS</LI>
-                    <i>Pão, maionese, frango, mussarela, catupiry, cheddar, tomete, milho e ervilha.
-                    </i>
-                    <LI>FILEZINHO</LI>
-                    <i>Pão, maionese, filé, mussarela e tomate.</i>
-                    <LI>FILÉ COM UM MOI DE CEBOLA</LI>
-                    <i>Pão, maionese, filé, cebolas, mussarela e tomate.</i>
-                    <LI>FILÉ SUSPEITO</LI>
-                    <i>Pão, filé e etc...</i>
-                    <LI>CACHORRO PRENSADO</LI>
-                    <i>Pão, maionese, salsicha, mussarela, tomate e batata palha.
-                    </i>
-                    <LI>CACHORRO PRENSADO COM SALADDA</LI>
-                    <i>Pão, maionese, salsicha, mussarela,milho, ervilha, tomate, alface e batata palha.</i>
-                    <LI>GRINGO</LI>
-                    <i>Pão, maionese importada, salsicha, mussarela,milho, ervilha importada, tomate importado, alface e batata palha.</i>
-                </OL>
-            </TD>
-            <td>
-                <ul style="font-family:'Times New Roman', Times, serif;">
-                    <li>R$ 7,00</li><br>
-                    <li>R$ 6,00</li><br>
-                    <li>R$ 15,00</li><br>
-                    <li>R$ 11,00</li><br>
-                    <li>R$ 10,00</li><br>
-                    <li>R$ 12,00</li><br>
-                    <li>R$ 17,00</li><br><br>
-                    <li>R$ 7,00</li><br>
-                    <li>R$ 9,00</li><br>
-                    <li>R$ 10,00</li><br>
-                    <li>R$ 15,00</li><br>
-                    <li>R$ 12,00</li><br>
-                    <li>R$ 12,00</li><br>
-                    <li>R$ 17,00</li><br>
-                    <li>R$ 20,00</li><br>
-                    <li>R$ 12,00</li><br>
-                    <li>R$ 15,00</li><br>
-                    <li>R$ 50,00</li><br>
-                </ul>
-            </td>
-        </TR>
-    </table>
-
+<body class="bg-menu" style="background-color: black; color: gold;">    
+    <div class="container-cardapio">
+        <table>
+            <tr>
+                <th style="border: 1PX gold SOLID;">LANCHE</th>
+                <TH style="border: 1PX gold SOLID;">PREÇO</TH>
+            </tr>
+            <TR>
+                <TD>
+                    <OL>
+                        <LI>ZÉ BURGER</LI>
+                        <I>Pão, maionese, hamburguer e mussarela.</I>
+                        <LI>SALADA-Z</LI>
+                        <i>Pão, maionese, hamburguer, presunto, mussarela, alface e tomate.
+                        </i>
+                        <LI>SALADA SUPER ZÉ</LI>
+                        <i>Pão, malonese, hamburguer, presunto, mussarela, bacon, ovo, catupiry, alface e tomate.</i>
+                        <LI>TOICINHO</LI>
+                        <i>Pão, maionese, hamburguer, mussarela, bacon, alface e tomate.</i>
+                        <LI>CALABREZA</LI>
+                        <i>Pão, maionese, hamburguer, mussarela, calabresa, alface e tomate.</i>
+                        <LI>CALAPORCO</LI>
+                        <i>Pão, maionese, hamburguer, mussarela, calabresa, bacon, alface e tomate.</i>
+                        <LI>BAGUNÇA</LI>
+                        <i>Pão, maionese, hamburguer, presunto, mussarela, calabresa, bacon, ovo, <br> filé de frango, catupiry, alface e tomate.</i>
+                        <LI>MISTO</LI>
+                        <i>Pão, maionese, presunto e mussarela.</i>
+                        <LI>MISTO A MODA DO ZÉ</LI>
+                        <i>Pão, maionese, presunto, mussarela, catupiry e tomate.</i>
+                        <LI>FRANGO</LI>
+                        <i>Pão, maionese, filé de frango, mussarela, alface e tomate.</i>
+                        <LI>FRANGO SUSPEITO</LI>
+                        <i>Pão, frango e etc...</i>
+                        <LI>FRANGO 3 QUEIJOS</LI>
+                        <i>Pão, maionese, frango, mussarela, catupiry, cheddar, tomete, milho e ervilha.
+                        </i>
+                        <LI>FILEZINHO</LI>
+                        <i>Pão, maionese, filé, mussarela e tomate.</i>
+                        <LI>FILÉ COM UM MOI DE CEBOLA</LI>
+                        <i>Pão, maionese, filé, cebolas, mussarela e tomate.</i>
+                        <LI>FILÉ SUSPEITO</LI>
+                        <i>Pão, filé e etc...</i>
+                        <LI>CACHORRO PRENSADO</LI>
+                        <i>Pão, maionese, salsicha, mussarela, tomate e batata palha.
+                        </i>
+                        <LI>CACHORRO PRENSADO COM SALADDA</LI>
+                        <i>Pão, maionese, salsicha, mussarela,milho, ervilha, tomate, alface e batata palha.</i>
+                        <LI>GRINGO</LI>
+                        <i>Pão, maionese importada, salsicha, mussarela,milho, ervilha importada, tomate importado, alface e batata palha.</i>
+                    </OL>
+                </TD>
+                <td>
+                    <ul style="font-family:'Times New Roman', Times, serif;">
+                        <li>R$ 7,00</li><br>
+                        <li>R$ 6,00</li><br>
+                        <li>R$ 15,00</li><br>
+                        <li>R$ 11,00</li><br>
+                        <li>R$ 10,00</li><br>
+                        <li>R$ 12,00</li><br>
+                        <li>R$ 17,00</li><br><br>
+                        <li>R$ 7,00</li><br>
+                        <li>R$ 9,00</li><br>
+                        <li>R$ 10,00</li><br>
+                        <li>R$ 15,00</li><br>
+                        <li>R$ 12,00</li><br>
+                        <li>R$ 12,00</li><br>
+                        <li>R$ 17,00</li><br>
+                        <li>R$ 20,00</li><br>
+                        <li>R$ 12,00</li><br>
+                        <li>R$ 15,00</li><br>
+                        <li>R$ 50,00</li><br>
+                    </ul>
+                </td>
+            </TR>
+        </table>
+    </div>
 </body>
 </html>
